Changes
=======

0.3.3 (2019-)
------------------
- fix get_dem to use CRS parameters correctly (#53)
- add --dim option to bc2pg to support loading data with Z dimensions
- make CLI option sortby case insensitive
- bug fixes

0.3.2 (2019-03-22)
------------------
- add append option to bc2pg
- fix bcdata cat not requesting specified CRS (#48)
- fix crash when DATABASE_URL not set (#49)
- handle WCS request errors

0.3.1 (2019-01-28)
------------------
- fix #45
- add progress bar
- enable bc2pg pagesize

0.3.0 (2019-01-04)
------------------
Major revision, nothing is backwards compatible
- download data via WFS rather than DWDS
- functions renamed
- data downloaded to file is to geojson only
- added `bc2pg` command for mirroring BC table in postgres

0.2.0 (2018-01-22)
------------------
- use DataBC Catalogue API to find data (#25, #31)

0.1.0.post1 (2018-01-17)
------------------
- fix typo in README

0.1.0 (2018-01-17)
------------------
- upload release to PyPI
- add continuous integration testing
- simplify file structure
- add info function/option (#30)
- require html5lib (#29)
- add path option to download function (#28)
- set default timeout 2hrs (#27, #26)
- Python 3 compatible, test with tox (#23)
- fix test (#21)

0.0.5 (2016-10-18)
------------------
- remove selenium and phantomjs dependencies
- geomark support removed
- CRS support removed

0.0.4 (2016-07-08)
------------------
- headless downloads! (#1)
- cli testing now functional (#3)

0.0.3 (2016-07-08)
------------------
- use a better key to find download link on catalog page (#15)

0.0.2 (2016-07-06)
------------------
- close issues related to layers / projections / appending (#2, #9, #10)
- cleanup
- fix problems with CLI

0.0.1 (2016-07-03)
------------------
Automation of simple downloads from British Columbia's Data Distribution Service.